hphp/hack/test/typecheck/expression_trees/splice_err6.php.like_types.exp
File "splice_err6.php", line 10, characters 17-35:
Typing error (Typing[4110])
  File "splice_err6.php", line 10, characters 17-35:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "splice_err6.php", line 5, characters 26-63:
  But got `dynamic` because it is an unenforceable type
File "splice_err6.php", line 10, characters 23-29:
Typing error (Typing[4110])
  File "splice_err6.php", line 10, characters 23-33:
  Expected `num` because this is used in an arithmetic operation
  File "splice_err6.php", line 10, characters 23-29:
  But got `string`
File "splice_err6.php", line 10, characters 23-33:
Invalid argument (Typing[4110])
  File "splice_err6.php", line 5, characters 14-19:
  Expected `string`
  File "splice_err6.php", line 10, characters 23-33:
  But got `int` because this is the result of an integer arithmetic operation
